Fix en overlapping de CSS para AJAX indicator

--- a/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
+++ b/intranet/htdocs/intranet-tmpl/temas/default/includes/completo.css
@@ -4,9 +4,18 @@ body,html {
 	background-color: #EAEBED;
 }
 
-body input[type="text"]:focus {
-	background: #EAEBED;
-	
+/*body input[type="text"]:focus {*/
+/*	background: #EAEBED;*/
+/*	position: relative;*/
+/*	z-index: 1;*/
+/*	*/
+/*}*/
+
+.focusInput {
+    background: #EAEBED;
+    position: relative;
+    z-index: 1;
+    
 }
 
 fieldset {
